Finished Innovation Page

--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@
      align-items: center;
 }
 
-/* Here starts the Middle Header */
+/* Here starts the Page Title */
 
 .brand-title {
      padding-left: 20px;
