--- a/styles/main.css
+++ b/styles/main.css
@@ -71,3 +71,43 @@ a {
 .top-link a {
      color: #216be3;
 }
+
+/* Here Starts the Science Page */
+
+.science-layout {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: center;
+}
+
+.science-list {
+     text-align: center;
+     margin-bottom: 50px;
+}
+
+.list-align {
+     text-align: left;
+}
+
+.science-topic {
+     width: 45%;
+}
+
+@media only screen and (max-width: 768px) {
+     .science-topic {
+          width: 90%;
+     }    
+}
+
+/* Here Starts the Science Sub Page */
+
+.title-head {
+     text-align: center;
+     font-size: 20px;
+}
+
+.science-layout {
+     font-size: 110%;
+     padding: 10px 25px;
+}
