--- a/styles/header.css
+++ b/styles/header.css
@@ -44,6 +44,7 @@
      padding: 0px;
      margin: 0px;
      border: 1px solid #000000;
+     transition: 3s ease-in-out;
 }
 
 .nav-item {
@@ -110,4 +111,5 @@ nav a:hover {
 
 .menu.active {
      right: 0px;
+     transition-duration: .5s;
 }
