--- a/styles/main.css
+++ b/styles/main.css
@@ -80,96 +80,44 @@ a {
 
 /* Here Starts the Companies Page */
 
-.left-nav {
-     display: flex;
+.company-title {
+     text-align: center;
+     padding: 25px 0px;
 }
 
-.company-menu:hover {
-     cursor: pointer;
-}
-
-.company-menu .stripe:nth-child(2) {
-     opacity: 0;
-}
-
-.company-menu .stripe:nth-child(1) {
-     transform: translateY(7px) rotate(45deg);
-}
-
-.company-menu .stripe:nth-child(3) {
-     transform: translateY(-7px) rotate(-45deg);
-}
-
-.company-menu.active .stripe:nth-child(2) {
-     opacity: 1;
-}
-
-.company-menu.active .stripe:nth-child(1) {
-     transform: none;
-}
-
-.company-menu.active .stripe:nth-child(3) {
-     transform: none;
-}
-
-.nav-panel {
-     width: 175px;
-     display: flex;
-     justify-content: space-around;
-     align-items: center;
-     position: fixed;
-     top: 50px;
-     left: 0px;
-     height: 50px;
-     border-top: 1px solid #000000;
-     border-right: 1px solid #000000;
-     border-bottom: 1px solid #000000;
-}
-
-.company-nav {
-     background-color: #58d3dc;
-     position: fixed;
-     padding-top: 25px;
-     top: 100px;
-     left: 0px;
-     bottom: 0px;
-     width: 175px;
-     border-right: 1px solid #000000;
-}
-
-.company-nav a {
-     color: #000000;
-}
-
-.company-nav a:hover {
-     color: #ffffff;
-}
-
-.company-nav ul {
-     list-style: none;
-     padding-left: 10px;
-     margin: 0px;
-}
-
-.company-nav.active {
-     left: -100%;
-}
-
-.stripe {
-     background-color: #000000;
-     height: 5px;
-     width: 25px;
-     margin: 2px;
-}
-
-.company-nav h2 {
+.company-list h2 {
      font-size: 18px;
 }
 
-.navmenu-item {
-     padding-left: 25px;
+.page-display {
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-items: flex-start;
 }
 
+.company-list {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     width: 300px;
+     margin: 10px;
+}
+
+.company-list ul {
+     list-style: none;
+     padding: 0px;
+     margin: 0px;
+}
+
+.company-list a {
+     color: #216be3;
+}
+
+.company-list a:hover {
+     color: #000000;
+}
 
 /* Here Starts the Science Page */
 
@@ -198,20 +146,34 @@ a {
      color: #000000;
 }
 
-/* Here Starts the Profile Pages */
+/* Here Starts the Company Profile Pages */
+
+.back-companies {
+     margin: 10px;
+}
+
+.back-companies a {
+     color: #216be3;
+}
+
+.back-companies a:hover {
+     color: #000000;
+}
+
+.company-container {
+     padding: 10px;
+}
 
 .company-name {
      text-align: center;
 }
 
 .company-name a {
-     color: #000000;
+     color: #216be3;
 }
 
 .company-name a:hover {
-     color: #58d3dc;
-     text-shadow: 1px 1px 1px #000000;
-     transition: .5s;
+     color: #000000;
 }
 
 .company-layout {
