--- a/styles/main.css
+++ b/styles/main.css
@@ -254,6 +254,11 @@ a {
      margin-bottom: 50px;
 }
 
+.sub-header {
+     text-align: center;
+     margin: 25px 0;
+}
+
 .investor-link {
      margin: 50px 0;
      list-style-type: none;
