--- a/styles/main.css
+++ b/styles/main.css
@@ -101,7 +101,7 @@ a {
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
-     align-items: center;
+     align-items: flex-start;
 }
 
 .company-list {
