--- a/styles/main.css
+++ b/styles/main.css
@@ -57,15 +57,38 @@ a {
      text-align: center;
 }
 
-.large-text {
-     font-size: 20px;
+/* Here Starts the Innovation Page */
+
+.innovation-listhead {
+     text-align: center;
+     margin: 0;
+     padding-top: 30px;
+     padding-bottom: 0px;
 }
 
-/* Here Starts the Innovation Page */
+.innovation-titles {
+     text-align: center;
+}
+
+.innovation-tech {
+     text-align: center;
+}
+
+.innovation-link {
+     list-style-type: none;
+}
+
+.innovation-link a {
+     color: #216be3;
+}
+
+.innovation-link a:hover {
+     color: #000000;
+}
 
 .list-border {
      margin: 0px 10px;
-     border: 1px solid #000000;
+     border-bottom: 1px solid #000000;
 }
 
 .list-header {
@@ -81,9 +104,12 @@ a {
      text-align: left;
 }
 
-.tech-list {
-     font-size: 20px;
-     font-weight: 700;
+.tech-list a {
+     color: #216be3;
+}
+
+.tech-list a:hover {
+     color: #000000;
 }
 
 /* Here Starts the Companies Page */
