--- a/styles/main.css
+++ b/styles/main.css
@@ -346,11 +346,5 @@ table tr:hover {
 /* Clinical Data Page Style */
 
 .data-set {
-     width: 1000px;
-}
-
-@media screen and (max-width: 800px) {
-     .data-set {
-          width: 400px;
-     }
+     width: 90vw;
 }
