--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,7 @@
      justify-content: space-between;
      align-items: center;
      border-bottom: 1px solid #000000;
+     font-family: 'Courier New', Courier, monospace;
 }
 
 /* Here starts the Page Title */
@@ -43,7 +44,7 @@
      font-size: 120%;
      top: 50px;
      right: -100%;
-     width: 220px;
+     width: 250px;
      height: 350px;
      padding: 0px;
      margin: 0px;
@@ -55,7 +56,7 @@
      background-color: #ffffff;
      margin: 3px 0px;
      border-radius: 20px;
-     width: 125px;
+     width: 175px;
      list-style-type: none;
      padding: 8px 16px;
 }
