New Styling Update

--- a/styles/header.css
+++ b/styles/header.css
@@ -9,7 +9,7 @@
      justify-content: space-between;
      align-items: center;
      border-bottom: 1px solid #000000;
-     font-family: 'Courier New', Courier, monospace;
+     font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
 /* Here starts the Page Title */
