--- a/styles/main.css
+++ b/styles/main.css
@@ -178,6 +178,10 @@ ul {
      margin: 10px;
 }
 
+.back-companies a {
+     padding-right: 25px;
+}
+
 @media only screen and (max-width: 768px) {
      .section-container {
           width: 90%;
